"linked-personal-css-file, added float to image to fix text-wrap issue"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,30 @@ body {
     background: url(../../assets/images/cheap_diagonal_fabric.png)
 }
 
-p {color:red}
+
+#navbar {
+    color:#f6f9fa;
+    font-family: 'Shadows Into Light', cursive;
+    padding:1%;
+    font-size: 24pt; 
+    border-radius: 15px;
+
+}
+
+h2 {
+    font-family: 'Shadows Into Light', cursive;
+    color:#17a2b8;
+}
+
+#header {
+    border-bottom: 2px solid #bbbbbb;
+}
+
+img{
+    float:left; 
+    margin: 15px;
+}
+
+p {
+    margin: 10px ;
+}
